<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bounswe.mercatus.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_articles"
        android:name="com.bounswe.mercatus.ui.ArticlesFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.bounswe.mercatus.ui.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_portfolios"
        android:name="com.bounswe.mercatus.ui.PortfolioFragment"
        android:label="@string/menu_portfolios"
        tools:layout="@layout/fragment_portfolios" />

    <fragment
        android:id="@+id/nav_forex"
        android:name="com.bounswe.mercatus.ui.ForexFragment"
        android:label="@string/forex"
        tools:layout="@layout/fragment_forex" />

    <fragment
        android:id="@+id/nav_digital"
        android:name="com.bounswe.mercatus.ui.DigitalFragment"
        android:label="@string/digital"
        tools:layout="@layout/fragment_digital" />

    <fragment
        android:id="@+id/nav_other"
        android:name="com.bounswe.mercatus.ui.OtherFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_other" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bounswe.mercatus.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_assets"
        android:name="com.bounswe.mercatus.ui.AssetsFragment"
        android:label="@string/menu_asset"
        tools:layout="@layout/fragment_asset" />
</navigation>