<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:paddingRight="24dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8">

                <TextView
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment"
                    android:textColor="@color/colorBlack"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@string/ask"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@string/bid"/>
        </LinearLayout>
</LinearLayout>