<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/eachNotifyItem"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/txtNotifyName"
                    android:text="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/reason"
                    android:id="@+id/txtReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/date"
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <ImageView
                android:id="@+id/imageList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_arrow_forward" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>