<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/new_margin"
    android:paddingLeft="@dimen/new_margin"
    android:paddingRight="@dimen/new_margin"
    android:paddingTop="@dimen/new_margin">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:paddingTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:maxLines="5"
                android:text="@string/content"
                app:animation_duration="300"
                android:paddingBottom="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/makeComment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_comment"/>

                <TextView
                    android:gravity="end"
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>