<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginActivity"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardV"
            android:layout_width="330dp"
            android:layout_height="340dp"
            android:alpha="0.85"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-162dp"
                tools:layout_editor_absoluteY="413dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mail_address"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                   <Button
                        android:id="@+id/buttonSigin"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:text="@string/sign_in"
                        android:background="@drawable/button_shape1"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/continue_guest"
        android:background="@drawable/button_shape1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="5dp"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:background="@drawable/button_shape1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGuest"/>
</androidx.constraintlayout.widget.ConstraintLayout>