<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:gravity="start"
            android:textSize="16dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:padding="@dimen/padding_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cre_content"
            android:gravity="start"
            android:textSize="16dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editContent"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:lines="15"
                android:maxLines="15"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:gravity="center"
            android:id="@+id/createNewArticle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_article"/>
    </LinearLayout>
</ScrollView>